--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mantine/core": "^7.0.0",
+    "@mantine/core": "^7.17.2",
     "@mantine/hooks": "^7.0.0",
+    "@mantine/modals": "^7.17.2",
+    "@polkadot/api": "^15.8.1",
+    "@polkadot/extension-dapp": "^0.58.6",
+    "autoprefixer": "^10.4.13",
     "next": "15.2.3",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.56.0",
     "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/node": "22.13.13",
+    "@types/react": "19.0.12",
     "typescript": "^5.0.0"
   }
 }
