added subnet page and updated subnet hooks.

--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ NEXT_PUBLIC_BITTENSOR_NODE_ENDPOINT_MAINNET = wss://entrypoint-finney.opentensor
 NEXT_PUBLIC_BITTENSOR_NODE_ENDPOINT_TESTNET = wss://test.finney.opentensor.ai:443
 NEXT_PUBLIC_BITTENSOR_NODE_ENDPOINT = wss://test.finney.opentensor.ai:443
 
-NEXT_PUBLIC_SERVER_URL = http://localhost:8000
+NEXT_PUBLIC_SERVER_URL = http://173.199.119.80:8000
+NEXT_PUBLIC_SERVER_URL_LOCAL = http://localhost:8000
