--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@mantine/modals": "^7.17.2",
     "@polkadot/api": "^15.8.1",
     "@polkadot/extension-dapp": "^0.58.6",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@tanstack/react-query": "^5.69.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "framer-motion": "^12.6.2",
     "next": "15.2.3",
     "postcss": "^8.5.3",
     "react": "18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "18.2.0",
     "recharts": "^2.15.1",
     "tabler-icons-react": "^1.56.0",
