--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/modals": "^7.17.2",
     "@polkadot/api": "^15.8.1",
     "@polkadot/extension-dapp": "^0.58.6",
+    "@svgr/webpack": "^8.1.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@tanstack/react-query": "^5.69.0",
@@ -36,10 +37,5 @@
     "@types/react": "19.0.12",
     "msw": "^2.7.3",
     "typescript": "^5.0.0"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
   }
 }
