--- a/package.json
+++ b/package.json
@@ -15,13 +15,22 @@
     "@mantine/modals": "^7.17.2",
     "@polkadot/api": "^15.8.1",
     "@polkadot/extension-dapp": "^0.58.6",
+    "@react-financial-charts/annotations": "^2.0.0",
+    "@react-financial-charts/axes": "^2.0.0",
+    "@react-financial-charts/coordinates": "^2.0.0",
+    "@react-financial-charts/core": "^2.0.0",
+    "@react-financial-charts/scales": "^2.0.0",
+    "@react-financial-charts/series": "^2.0.0",
     "@svgr/webpack": "^8.1.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@tanstack/react-query": "^5.69.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "d3-format": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "framer-motion": "^12.6.2",
+    "lightweight-charts": "^4.0.1",
     "next": "15.2.3",
     "postcss": "^8.5.3",
     "react": "18.2.0",
@@ -33,6 +42,8 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-time-format": "^4.0.3",
     "@types/node": "22.13.13",
     "@types/react": "19.0.12",
     "msw": "^2.7.3",
